--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -35,21 +35,14 @@
   align-items: center;
 }
 
-.title a {
+.title span {
   color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
 }
 
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 .title,
@@ -60,6 +53,15 @@
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
+}
+
+.form {
+  width: 80%;
+}
+
+.form textarea {
+  width: 100%;
+  height: 15rem;
 }
 
 .code {
